Query specific post and display then clicked

--- a/views/blog/index.hbs
+++ b/views/blog/index.hbs
@@ -19,7 +19,7 @@
                 <img class="img-responsive" src="{{image}}" alt="">
             </a>
             <h3>
-                <a href="#">{{title}}</a>
+                <a href="/post?id={{_id}}">{{title}}</a>
             </h3>
             <p>{{des}}</p>
         </div>
